--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/e:/Java_workspace/CurrencySample/h2Data/currency-sample
+spring.datasource.url=jdbc:h2:tcp://localhost/~/Documents/workspace/java/CurrencyPractice/h2Data/currency-sample
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
@@ -8,5 +8,3 @@ spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-com.fasterxml.jackson.databind.ObjectMapper=true
-javax.json.bind.Jsonb=true
